# 7.19

./: CHANGELOG.md  Makefile  PROJECT_STRUCTURE.md  README.md  USAGE_GUIDE.md  config.json  install_dependencies.py  portable.txt  pyproject.toml  requirements.txt  run.py  run_VideoDownloader.bat  run_VideoDownloader.sh  test_html_style.py  video_downloader (1).html
.config/: social_cookies.json  twitter_cookies.json
.github/workflows/: build-portable.yml  compatibility-tests.yml  release.yml  tests.yml
.kiro/steering/: chinese-communication.md
Data/: README.txt
Data/Config/: README.txt  settings.json
app/: __init__.py  main_hybrid.py
app/core/: __init__.py  config.py  portable.py  updater.py
app/core/downloader/: __init__.py  base.py  (+8 more)
app/data/: __init__.py
app/plugins/: bilibili.py  example.py  fc2.py  flickr.py  instagram.py  kissjav.py  pixiv.py  pornhub.py  tiktok.py  tumblr.py  twitch.py  twitter.py  weibo.py  xhamster.py  xvideo.py  youporn.py  youtube.py
app/services/: advanced_features_service.py  audio_converter.py  config_service.py  creator_monitor_service.py  creator_service.py  download_service.py  history_service.py  settings_service.py  system_integration_service.py  update_service.py
app/ui/: __init__.py  animation_helper.py  enhanced_interface.html  html_style_window.py  macos_widgets.py  main_window.py  web_interface.py
build_scripts/: VideoDownloader_windows.spec  build_portable.py  pyinstaller_config.py  version_info.txt
docs/: 功能演示视频脚本.md  发布说明.md  常见问题解答.md  性能优化指南.md  插件开发指南.md  故障排除指南.md  用户使用手册.md  用户快速指南.md
examples/: advanced_features_demo.py  database_usage.py  download_list_management_demo.py  file_management_demo.py  history_system_demo.py  plugin_system_demo.py  portable_demo.py  settings_dialog_demo.py  system_integration_demo.py  ui_components_demo.py  ui_demo.py  update_system_demo.py
release/: app_store_description.json  marketing_materials.json  press_release.md  release_checklist.md  website_content.md
tests/: conftest.py  pytest.ini  run_compatibility_tests.py  test_adult_platform_plugins.py  test_advanced_downloader.py  test_advanced_features.py  test_config_service.py  test_core_models.py  test_core_platform_plugins.py  test_cross_platform_compatibility.py  test_database.py  test_download_list_management.py  test_download_manager.py  test_file_management.py  test_framework_validation.py  test_history_system.py  test_integration.py  test_performance.py  test_plugin_system.py  test_portable_build.py  test_python_version_compatibility.py  test_runner.py  test_settings_dialog.py  test_social_media_plugins.py  test_streaming_image_plugins.py  test_system_integration.py  test_ui_automation.py  test_ui_components.py  test_ui_framework.py  test_update_system.py
tests/utils/: dependency_checker.py  fixtures.py  test_helpers.py
(+56 files in other folders)
