[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-platform-video-downloader"
version = "1.0.0"
description = "Professional multi-platform video downloader with macOS-style UI"
authors = [
    {name = "Video Downloader Team", email = "team@videodownloader.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP",
]
keywords = ["video", "downloader", "youtube", "bilibili", "tiktok", "instagram"]

dependencies = [
    "PySide6>=6.5.0",
    "yt-dlp>=2023.7.6",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.1.0",
    "python-dateutil>=2.8.2",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "Pillow>=10.0.0",
    "cryptography>=41.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-qt>=4.2.0",
    "pytest-html>=3.2.0",
    "pytest-cov>=4.1.0",
    "pytest-xvfb>=3.0.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
video-downloader = "app.main:main"

[project.urls]
Homepage = "https://github.com/videodownloader/multi-platform-video-downloader"
Repository = "https://github.com/videodownloader/multi-platform-video-downloader"
Documentation = "https://videodownloader.readthedocs.io"
"Bug Tracker" = "https://github.com/videodownloader/multi-platform-video-downloader/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"